# algorithm

./: Cargo.toml
benches/: try.rs
src/: hash.rs  lib.rs  linear_algebra.rs  main.rs  search_and_sort.rs  sort.rs  test.rs
src/hash/: naive_hash_table.rs
src/linear_algebra/: matrix.rs
src/search_and_sort/: binary_search.rs  counting_sort.rs  insertion_sort.rs  merge_sort.rs  quick_sort.rs
src/sort/: counting_sort.rs  heap_sort.rs  insertion_sort.rs  merge_sort.rs  quick_sort.rs
