[package]
name = "algorithm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dev-dependencies]
rand = "0.8.5"
criterion = { version = "0.4", features = ["html_reports"] }


[[bench]]
name = "try"
harness = false

[dependencies]
rand = "0.8.5"
